// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BodyFatScale /> should match snapshot - male 1`] = `
<DocumentFragment>
  <h3
    class="title-0-2-1"
  >
    Tu resultado: 20.0%
  </h3>
  <div
    class="scaleOuterContainer-0-2-2"
  >
    <div
      class="pointerIndicator-0-2-3"
      style="left: 60px;"
    >
      <span
        class="percentage-0-2-4"
      >
        20.0%
      </span>
      <div
        class="pointerIndicatorIcon-0-2-5"
      />
    </div>
    <div
      class="scaleContainer-0-2-6"
    />
    <div
      class="indicators-0-2-8"
    >
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          2-4%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Esencial
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          6-13%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Deportista
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          14-17%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Fitness
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          18-25%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Aceptable
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          25%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Obeso
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<BodyFatScale /> should match snapshot - male 2`] = `
<DocumentFragment>
  <h3
    class="title-0-2-1"
  >
    Tu resultado: 20.0%
  </h3>
  <div
    class="scaleOuterContainer-0-2-2"
  >
    <div
      class="pointerIndicator-0-2-3"
      style="left: 60px;"
    >
      <span
        class="percentage-0-2-4"
      >
        20.0%
      </span>
      <div
        class="pointerIndicatorIcon-0-2-5"
      />
    </div>
    <div
      class="scaleContainer-0-2-6"
    />
    <div
      class="indicators-0-2-8"
    >
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          10-13%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Esencial
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          14-20%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Deportista
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          21-24%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Fitness
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          25-31%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Aceptable
        </p>
      </div>
      <div
        class="indicatorContainer-0-2-7"
      >
        <div
          class="indicatorColor-0-2-9"
        />
        <span
          class="indicatorPercentage-0-2-10"
        >
          32%
        </span>
        <p
          class="indicatorText-0-2-11"
        >
          Obeso
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
